--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 h1 {
    color: 	#FF0000;
-  font-family: "Comic Sans MS", "Comic Sans", cursive;
+
 }
-  style = "body { background-color: white; color: black; font-family: "
-       "'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif; }\n" 
-"hr { border: 0; border-bottom: 1px dashed; }\n";
+font-family: comic sans ms
